fix: Modal background clipping

--- a/scss/_flist_overrides.scss
+++ b/scss/_flist_overrides.scss
@@ -12,6 +12,7 @@ hr {
   box-shadow: 6px 9px 19px 0px rgba(16, 16, 16, 0.25);
   border-radius: 1em;
   border: none;
+  overflow: hidden;
 }
 
 .modal-backdrop {
